--- a/index.html
+++ b/index.html
@@ -265,7 +265,9 @@
         </div>
     </section>
     <!-- -------------------projects-------------- -->
-    <section></section>
+    <section>
+        <h1>hello</h1>
+    </section>
 </body>
 
 </html>
