--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     </section>
     <!-- -------------------projects-------------- -->
     <section>
-        <h1>hello</h1>
+        <h1 class="new">hello</h1>
     </section>
 </body>
 
