--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EDYODA - Final HTML, CSS Projects</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
@@ -263,11 +263,25 @@
             </div>
         </a>
         </div>
+        <div class="color-box">
+            <h1>
+                LET'S MAKE SOMETHING GREAT TOGETHER</h1>
+                <h4>Get in touch with us and send some basic info for a quick quote.</h4>
+                <div class="heading-title-btn btn">GET FREE QOUTES</div>
+        </div>
+        <section class="team">
+            <div class="top-heading">
+                <div class="left-text heading">
+                    <h1 class="top-title">PROFESSIONAL
+                    </h1>
+                    <h1 class="top-title absolute">TEAM</h1>
+                </div>
+                <div class="right-text heading-title-btn">ABOUT US</div>
+            </div>
+        </section>
     </section>
     <!-- -------------------projects-------------- -->
-    <section>
-        <h1 class="new">hello</h1>
-    </section>
+   
 </body>
 
 </html>
