--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
             <div class="info-box-child">
                 <img src="./assets/mail.svg" alt="img" width="25">
                 <h1 class="info-heading">CONTACT</h1>
-                <h1 class="info-data">1-236-273676</h1>
-                <h1 class="info-data">01-304-23778</h1>
+                <h1 class="info-data">contact@nuuk.com</h1>
+                <h1 class="info-data">info@nuuk.com</h1>
             </div>
             <div class="info-box-child">
                 <img src="./assets/clock.svg" alt="img" width="25">
                 <h1 class="info-heading">OPENING TIMES</h1>
-                <h1 class="info-data">1-236-273676</h1>
-                <h1 class="info-data">01-304-23778</h1>
+                <h1 class="info-data">Mon - Sat 8:00 - 17:30, Sunday - Closed</h1>
+                <div class="find-map heading-title-btn">FIND ON MAP</div>
             </div>
         </div>
         <!-- -----------------info-box--------------- -->
@@ -278,6 +278,63 @@
                 </div>
                 <div class="right-text heading-title-btn">ABOUT US</div>
             </div>
+            <!-- --------------team-profiles----------- -->
+            <div class="team-profile-box">
+                <div class="profile-1">
+                    <div class="profile-img">
+                    </div>
+                    <div class="profile-content">
+                    <h1 class="profile-name">PHILIP BROWER</h1>
+                    <h3 class="profile-role">Managing Director</h3>
+                </div>
+                    <div class="profile-social-links">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="profile-2">
+                    <div class="profile-img">
+                    </div>
+                    <div class="profile-content">
+                    <h1 class="profile-name">JOHN WICK</h1>
+                    <h3 class="profile-role">Managing Director</h3>
+                </div>
+                    <div class="profile-social-links">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="profile-3">
+                    <div class="profile-img">
+                    </div>
+                    <div class="profile-content">
+                    <h1 class="profile-name">JIMMY MCGILL</h1>
+                    <h3 class="profile-role">Managing Director</h3>
+                </div>
+                    <div class="profile-social-links">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="profile-4">
+                    <div class="profile-img">
+                    </div>
+                    <div class="profile-content">
+                    <h1 class="profile-name">SARA CONNOR</h1>
+                    <h3 class="profile-role">Managing Director</h3>
+                </div>
+                    <div class="profile-social-links">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                
+            </div>
+
         </section>
     </section>
     <!-- -------------------projects-------------- -->
