--- a/index.html
+++ b/index.html
@@ -155,14 +155,18 @@
 
                 </div>
                 <div class="about-text-desc">
-                <p class="para-1">Based on collective work and shared knowledge, Nuuk aims to favor dialogue and debate, to transform
-                    individual knowledge into increased creative potential.</p> <br>
-                <p class="para-2">Our studio is a architecture practice based in NY and Paris. Today, it includes 150 architects, urban
-                    planners, landscape and interior designers of 25 different nationalities. The company principle of
-                    Architecture-Studio is the collective conception. From the very beginning, the practice has believed
-                    in the virtues of exchange, crossing ideas, common effort, shred knowledge.</p>
-                <div class="meet-team-btn right-text heading-title-btn">MEET THE TEAM</div>
-            </div>
+                    <p class="para-1">Based on collective work and shared knowledge, Nuuk aims to favor dialogue and
+                        debate, to transform
+                        individual knowledge into increased creative potential.</p> <br>
+                    <p class="para-2">Our studio is a architecture practice based in NY and Paris. Today, it includes
+                        150 architects, urban
+                        planners, landscape and interior designers of 25 different nationalities. The company principle
+                        of
+                        Architecture-Studio is the collective conception. From the very beginning, the practice has
+                        believed
+                        in the virtues of exchange, crossing ideas, common effort, shred knowledge.</p>
+                    <div class="meet-team-btn right-text heading-title-btn">MEET THE TEAM</div>
+                </div>
             </div>
         </div>
         <div class="number-box">
@@ -196,78 +200,84 @@
             <div class="right-text heading-title-btn">VIEW ALL WORKS</div>
         </div>
         <div class="projects-container">
-        <a href="">
-            <div class="project-box">
-                <img src="./assets/p-1.jpg" alt="img">
-                <div class="overlay">
-                    <a href=""><div class="view-btn">
-                        VIEW PROJECTS
+            <a href="">
+                <div class="project-box">
+                    <img src="./assets/p-1.jpg" alt="img">
+                    <div class="overlay">
+                        <a href="">
+                            <div class="view-btn">
+                                VIEW PROJECTS
+                            </div>
+                        </a>
                     </div>
-                </a>
                 </div>
-            </div>
-        </a>
-        <a href="">
-            <div class="project-box">
-                <img src="./assets/p-2.jpg" alt="img">
-                <div class="overlay">
-                    <a href=""><div class="view-btn">
-                        VIEW PROJECTS
+            </a>
+            <a href="">
+                <div class="project-box">
+                    <img src="./assets/p-2.jpg" alt="img">
+                    <div class="overlay">
+                        <a href="">
+                            <div class="view-btn">
+                                VIEW PROJECTS
+                            </div>
+                        </a>
                     </div>
-                </a>
                 </div>
-            </div>
-        </a>
-        <a href="">
-            <div class="project-box">
-                <img src="./assets/p-3.jpg" alt="img">
-                <div class="overlay">
-                    <a href=""><div class="view-btn">
-                        VIEW PROJECTS
+            </a>
+            <a href="">
+                <div class="project-box">
+                    <img src="./assets/p-3.jpg" alt="img">
+                    <div class="overlay">
+                        <a href="">
+                            <div class="view-btn">
+                                VIEW PROJECTS
+                            </div>
+                        </a>
                     </div>
-                </a>
                 </div>
-            </div>
-        </a>
-        <a href="">
-            <div class="project-box">
-                <img src="./assets/p-4.jpg" alt="img">
-                <div class="overlay">
-                    <a href=""><div class="view-btn">
-                        VIEW PROJECTS
+            </a>
+            <a href="">
+                <div class="project-box">
+                    <img src="./assets/p-4.jpg" alt="img">
+                    <div class="overlay">
+                        <a href="">
+                            <div class="view-btn">
+                                VIEW PROJECTS
+                            </div>
+                        </a>
                     </div>
-                </a>
                 </div>
-            </div>
-        </a>
-        <a href="">
-            <div class="project-box">
-                <img src="./assets/p-5.jpg" alt="img">
-                <div class="overlay">
-                    <a href=""><div class="view-btn">
-                        VIEW PROJECTS
+            </a>
+            <a href="">
+                <div class="project-box">
+                    <img src="./assets/p-5.jpg" alt="img">
+                    <div class="overlay">
+                        <a href="">
+                            <div class="view-btn">
+                                VIEW PROJECTS
+                            </div>
+                        </a>
                     </div>
-                </a>
                 </div>
-            </div>
-        </a>
-        <a href="">
-            <div class="project-box">
-                <img src="./assets/p-6.jpg" alt="img">
-                <div class="overlay">
-                    <a href=""><div class="view-btn">
-                        VIEW PROJECTS
+            </a>
+            <a href="">
+                <div class="project-box">
+                    <img src="./assets/p-6.jpg" alt="img">
+                    <div class="overlay">
+                        <a href="">
+                            <div class="view-btn">
+                                VIEW PROJECTS
+                            </div>
+                        </a>
                     </div>
-                </a>
                 </div>
-            </div>
-        </a>
+            </a>
         </div>
         <div class="color-box">
             <h1>
                 LET'S MAKE SOMETHING GREAT TOGETHER</h1>
-                <h4>Get in touch with us and send some basic info for a quick quote.</h4>
-                <div class="heading-title-btn btn">GET FREE QOUTES</div>
+            <h4>Get in touch with us and send some basic info for a quick quote.</h4>
+            <div class="heading-title-btn btn">GET FREE QOUTES</div>
         </div>
         <section class="team">
             <div class="top-heading">
@@ -284,9 +294,9 @@
                     <div class="profile-img">
                     </div>
                     <div class="profile-content">
-                    <h1 class="profile-name">PHILIP BROWER</h1>
-                    <h3 class="profile-role">Managing Director</h3>
-                </div>
+                        <h1 class="profile-name">PHILIP BROWER</h1>
+                        <h3 class="profile-role">Managing Director</h3>
+                    </div>
                     <div class="profile-social-links">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -297,9 +307,9 @@
                     <div class="profile-img">
                     </div>
                     <div class="profile-content">
-                    <h1 class="profile-name">JOHN WICK</h1>
-                    <h3 class="profile-role">Managing Director</h3>
-                </div>
+                        <h1 class="profile-name">JOHN WICK</h1>
+                        <h3 class="profile-role">Managing Director</h3>
+                    </div>
                     <div class="profile-social-links">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -310,9 +320,9 @@
                     <div class="profile-img">
                     </div>
                     <div class="profile-content">
-                    <h1 class="profile-name">JIMMY MCGILL</h1>
-                    <h3 class="profile-role">Managing Director</h3>
-                </div>
+                        <h1 class="profile-name">JIMMY MCGILL</h1>
+                        <h3 class="profile-role">Managing Director</h3>
+                    </div>
                     <div class="profile-social-links">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -323,22 +333,207 @@
                     <div class="profile-img">
                     </div>
                     <div class="profile-content">
-                    <h1 class="profile-name">SARA CONNOR</h1>
-                    <h3 class="profile-role">Managing Director</h3>
-                </div>
+                        <h1 class="profile-name">SARA CONNOR</h1>
+                        <h3 class="profile-role">Managing Director</h3>
+                    </div>
                     <div class="profile-social-links">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                
+
             </div>
 
         </section>
+        <!-- --------------testimonials--------------- -->
+        <section class="testimonial">
+            <div class="text-section text-div">
+                <div class="top-heading top-heading">
+                    <div class="left-text heading about-heading">
+                        <h1 class="top-title">TESTIMONIAL
+                        </h1><br>
+                        <P class="testimonial-text">Aenean ut eros et nisl sagittis vestibulum. Fusce neque. Praesent
+                            blandit laoreet nibh. Morbi mollis tellus ac sapien.</P>
+                        <h1 class="top-title absolute">CLIENT</h1>
+                    </div>
+
+                </div>
+                <div class="about-text-desc">
+
+                    <div class="our-services-btn right-text heading-title-btn">OUR SERVICES</div>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card card-top">
+                    <div class="top-circle">"</div>
+                    <h2 class="card-name">SARA WILLIAM</h2>
+                    <h3 class="card-role">CEO at Webflow
+                    </h3>
+                    <p class="card-para">"Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
+                        diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet"</p>
+                </div>
+                <div class="card card-down">
+                    <div class="top-circle">"</div>
+                    <h2 class="card-name">SARA WILLIAM</h2>
+                    <h3 class="card-role">CEO at Webflow
+                    </h3>
+                    <p class="card-para">"Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
+                        diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet"</p>
+                </div>
+                <div class="card card-top">
+                    <div class="top-circle">"</div>
+                    <h2 class="card-name">SARA WILLIAM</h2>
+                    <h3 class="card-role">CEO at Webflow
+                    </h3>
+                    <p class="card-para">"Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
+                        diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet"</p>
+                </div>
+                <div class="card card-down">
+                    <div class="top-circle">"</div>
+                    <h2 class="card-name">SARA WILLIAM</h2>
+                    <h3 class="card-role">CEO at Webflow
+                    </h3>
+                    <p class="card-para">"Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
+                        diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet"</p>
+                </div>
+            </div>
+        </section>
     </section>
     <!-- -------------------projects-------------- -->
-   
+    <!-- ------------blogs---------------- -->
+    <section class="blog-section">
+        <div class="top-heading">
+            <div class="left-text heading">
+                <h1 class="top-title">LATEST NEWS
+                </h1>
+                <h1 class="top-title absolute">BLOGS</h1>
+            </div>
+            <div class="right-text heading-title-btn">VIEW BLOGS</div>
+        </div>
+        <div class="blogpost-container">
+            <div class="blog">
+                <a href="">
+                    <div class="blog-img">
+                        <div class="meta-data">
+                            <p class="date">17</p>
+                            <p class="month">OCT</p>
+                        </div>
+                        <img src="./assets/port-1.jpg" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <h1 class="blog-name">BLOGPOST 1</h1>
+                        <p class="blog-para">Service and providing potential clients and customers with testimonials is
+                            one of the best ways to market.</p>
+                        <div class="right-text heading-title-btn read-more-btn"><a href="">READ MORE</a></div>
+                    </div>
+                </a>
+            </div>
+            <div class="blog">
+                <a href="">
+                    <div class="blog-img">
+                        <div class="meta-data">
+                            <p class="date">11</p>
+                            <p class="month">DEC</p>
+                        </div>
+                        <img src="./assets/port-2.jpg" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <h1 class="blog-name">BLOGPOST 2</h1>
+                        <p class="blog-para">Service and providing potential clients and customers with testimonials is
+                            one of the best ways to market.</p>
+                        <div class="right-text heading-title-btn read-more-btn"><a href="">READ MORE</a></div>
+                    </div>
+                </a>
+            </div>
+            <div class="blog">
+                <a href="">
+                    <div class="blog-img">
+                        <div class="meta-data">
+                            <p class="date">27</p>
+                            <p class="month">OCT</p>
+                        </div>
+                        <img src="./assets/port-3.jpg" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <h1 class="blog-name">BLOGPOST 3</h1>
+                        <p class="blog-para">Service and providing potential clients and customers with testimonials is
+                            one of the best ways to market.</p>
+                        <div class="right-text heading-title-btn read-more-btn"><a href="">READ MORE</a></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- ------------blogs---------------- -->
+    <!-- -------------companies------------- -->
+    <section class="company">
+        <h1>TRUSTED BY TOP COMPANIES</h1>
+        <a href="">
+            <div class="logo-1"><img src="./assets/logo-1w.png" alt=""></div>
+        </a>
+        <a href="">
+            <div class="logo-2"><img src="./assets/logo-2w.png" alt=""></div>
+        </a>
+        <a href="">
+            <div class="logo-3"><img src="./assets/logo-3w.png" alt=""></div>
+        </a>
+        <a href="">
+            <div class="logo-4"><img src="./assets/logo-4w.png" alt=""></div>
+        </a>
+        <a href="">
+            <div class="logo-5"><img src="./assets/logo-5w.png" alt=""></div>
+        </a>
+    </section>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-content-box">
+                <h2 class="footer-heading">
+                    ABOUT NUUK
+                </h2>
+                <p>Based on collective work and shared knowledge, Nuuk aims to favor dialogue and debate, to transform
+                    individual knowledge into increased creative potential.</p>
+                <div class="find-map heading-title-btn">FIND ON MAP</div>
+            </div>
+            <div class="footer-content-box">
+                <h2 class="footer-heading">
+                    SERVICES
+                </h2>
+                <div class="links">
+                    <a href="">
+                        <div class="find-map heading-title-btn">FINANCIAL RESULTS</div>
+                    </a>
+                    <a href="">
+                        <div class="find-map heading-title-btn">CONSTRUCTION</div>
+                    </a>
+                    <a href="">
+                        <div class="find-map heading-title-btn">ARCHITECTURE</div>
+                    </a>
+                    <a href="">
+                        <div class="find-map heading-title-btn">RENOVATION </div>
+                    </a>
+                </div>
+            </div>
+            <div class="footer-content-box footer-contact">
+                <h2 class="footer-heading">
+                    CONTACT US
+                    <div class="line"></div>
+                </h2>
+                <h3> <img src="./assets/phone.svg" alt="" width="20">
+                    PHONE NUMBER
+                </h3>
+                <p>1-800-506-266</p>
+                <h3> <img src="./assets/clock.svg" alt="" width="20">
+                    OPENING TIMES
+                </h3>
+                <p>Mon - Sat 8:00 - 17:30, Sunday - Closed</p>
+                <h3> <img src="./assets/mail.svg" alt="" width="20">
+                    CONTACT
+                </h3>
+                <p>contact@nuuk.com</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
