--- a/index.html
+++ b/index.html
@@ -533,6 +533,8 @@
                 <p>contact@nuuk.com</p>
             </div>
         </div>
+        <div class="footer-logo"><img src="./assets/logo-white.png" alt="img" width="90">
+        </div>
     </footer>
 </body>
 
