adding responsive code

--- a/index.html
+++ b/index.html
@@ -44,25 +44,21 @@
                         </div>
                     </div>
                 </ul>
+                <div class="humburger">
+
+                </div>
             </nav>
             <!-- ----------banner-text---------- -->
             <div class="banner-text">
                 <h1>YOU DREAM. WE CREATE.</h1>
                 <p>We turn your ideas to reality, we don't stop until you're satisfied.</p>
                 <button class="btn">GET FREE QOUTE</button>
+                
+        
             </div>
             <!-- ----------banner-text---------- -->
 
         </header>
-        <!-- --------social-icons-------- -->
-        <div class="social-icons">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-        <!-- --------social-icons-------- -->
-
 
         <!-- -----------------info-box--------------- -->
         <div class="info-box">
@@ -86,7 +82,12 @@
             </div>
         </div>
         <!-- -----------------info-box--------------- -->
-
+        <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
 
     </section>
     <!-- --------------home section----------- -->
@@ -360,7 +361,6 @@
 
                 </div>
                 <div class="about-text-desc">
-
                     <div class="our-services-btn right-text heading-title-btn">OUR SERVICES</div>
                 </div>
             </div>
