--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     </div>
                 </ul>
                 <div class="humburger">
-
+                    <span></span>
+                    <span></span>
                 </div>
             </nav>
             <!-- ----------banner-text---------- -->
@@ -199,7 +200,6 @@
             <div class="right-text heading-title-btn">VIEW ALL WORKS</div>
         </div>
         <div class="projects-container">
-            <a href="">
                 <div class="project-box">
                     <img src="./assets/p-1.jpg" alt="img">
                     <div class="overlay">
@@ -210,8 +210,6 @@
                         </a>
                     </div>
                 </div>
-            </a>
-            <a href="">
                 <div class="project-box">
                     <img src="./assets/p-2.jpg" alt="img">
                     <div class="overlay">
@@ -222,8 +220,6 @@
                         </a>
                     </div>
                 </div>
-            </a>
-            <a href="">
                 <div class="project-box">
                     <img src="./assets/p-3.jpg" alt="img">
                     <div class="overlay">
@@ -234,8 +230,6 @@
                         </a>
                     </div>
                 </div>
-            </a>
-            <a href="">
                 <div class="project-box">
                     <img src="./assets/p-4.jpg" alt="img">
                     <div class="overlay">
@@ -246,8 +240,6 @@
                         </a>
                     </div>
                 </div>
-            </a>
-            <a href="">
                 <div class="project-box">
                     <img src="./assets/p-5.jpg" alt="img">
                     <div class="overlay">
@@ -258,8 +250,6 @@
                         </a>
                     </div>
                 </div>
-            </a>
-            <a href="">
                 <div class="project-box">
                     <img src="./assets/p-6.jpg" alt="img">
                     <div class="overlay">
@@ -270,7 +260,6 @@
                         </a>
                     </div>
                 </div>
-            </a>
         </div>
         <div class="color-box">
             <h1>
@@ -289,7 +278,7 @@
             </div>
             <!-- --------------team-profiles----------- -->
             <div class="team-profile-box">
-                <div class="profile-1">
+                <div class="profile-1 profile">
                     <div class="profile-img">
                     </div>
                     <div class="profile-content">
@@ -302,7 +291,7 @@
                         <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="profile-2">
+                <div class="profile-2 profile">
                     <div class="profile-img">
                     </div>
                     <div class="profile-content">
@@ -315,7 +304,7 @@
                         <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="profile-3">
+                <div class="profile-3 profile">
                     <div class="profile-img">
                     </div>
                     <div class="profile-content">
@@ -328,7 +317,7 @@
                         <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="profile-4">
+                <div class="profile-4 profile">
                     <div class="profile-img">
                     </div>
                     <div class="profile-content">
@@ -531,7 +520,8 @@
                 <p>contact@nuuk.com</p>
             </div>
         </div>
-        <div class="footer-logo"><img src="./assets/logo-white.png" alt="img" width="90">
+        <div class="footer-logo">
+            <img src="./assets/logo-white.png" alt="img" width="90">
         </div>
     </footer>
 </body>
